<resources>
    <string name="app_name">Lab3_3Exercise</string>

    <string name="hello_world">Choose Age: </string>
    <string name="action_settings">Settings</string>

    <string name="display1"></string>

    <string-array name="age">
        <item>below 5</item>
        <item>6 to 10</item>
        <item>11 to 16</item>
        <item>17 to 21</item>
        <item>22 to 30</item>
        <item>31 to 40</item>
        <item>41 to 50</item>
        <item>over 50</item>
    </string-array>
    
    <string name="gender">Choose gender: </string>
    <string name="radioMale">Male</string>
    <string name="radioFemale">Female</string>

    <string name="additional">Additional</string>
    <string name="smoking">Smoking</string>
    <string name="calc">Calculate</string>
</resources>
